# MCP_Scanner

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  semgrep_runner.py
reports/rag/: nodes.json  rag_graph.html  raw_graph.json
reports/remediations/: targeting_suggestions.md
reports/semgrep/: llm_findings.json
semgrep_rules/: config.json
semgrep_rules/custom/: insecure_eval.yaml  llm_model_invocation.yaml  llm_prompt_injection.yaml  llm_tool_execution.yaml  sql_injection_concat.yaml
src/common/: __init__.py  config.py  logging.py
src/enumeration/: collector.py  context.py
src/fastapi/: __init__.py  app.py  testclient.py
src/graph/: __init__.py  base.py  enrichers.py
src/llm/: __init__.py  base.py  huggingface.py
src/mcp_scanner/: __init__.py  dspy_programs.py  llm_risk_examples.py  models.py  remediation.py  validation.py
src/mcp_vanguard/: __init__.py  __main__.py  core.py  http.py  registry.py  schemas.py  tools.py
src/pydantic/: __init__.py
src/pydantic_settings/: __init__.py
src/remediation/: __init__.py  dspy_driver.py  heuristic_patches.py  heuristic_program.py  huggingface_program.py
src/scanners/: __init__.py  base.py  (+1 more)
tests/: test_cli.py  test_dspy_driver.py  test_dspy_programs.py  test_enumeration_context.py  test_git_identity.py  test_heuristic_patches.py  test_heuristic_program.py  test_http.py  test_http_server_runtime.py  test_huggingface_program.py  test_llm_risk_examples.py  test_remediation.py  test_scan_github_repo_tool.py  test_service_operations.py  test_test_deployment_script.py
(+10 files in other folders)
